--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -48,11 +49,11 @@
 	<dependencies>
 	
 		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
-		<dependency>
+		<!-- <dependency>
     		<groupId>org.apache.maven.plugins</groupId>
     		<artifactId>maven-compiler-plugin</artifactId>
     		<version>3.7.0</version>
-		</dependency>
+		</dependency> -->
 	
 		<dependency>
 			<groupId>junit</groupId>
