change in credentials

--- a/Configuration/config.properties
+++ b/Configuration/config.properties
@@ -2,8 +2,8 @@
 baseURL=http://demo.guru99.com/v4/
 
 #USER CREDENTIALS
-username=mngr193587
-password=gynusUb
+username=mngr246685
+password=zUvAqAr
 
 #BROWSERS
 chromepath=./Drivers\\chromedriver.exe
